--- a/TeX/Anhang.tex
+++ b/TeX/Anhang.tex
@@ -1,8 +1,26 @@
+\titlespacing*{\chapter}{0pt}{-30pt}{20pt}
+
 \chapter{Anhang}
 \thispagestyle{fancy} % Manually set the page style
 
 \section{Quellcode}
-Quellcode
+Der Quellcode und das Programm sind über den beigelegten USB-Stick oder über
+folgenden GitHub Link verfügbar: \newline
+\url{https://www.github.com/kevinoverflow/Fraktale}
 % \section{Abbildungen} %
+\section{Bibliotheken}
+\subsubsection*{GLFW}
+\textit{Eine plattformübergreifende Bibliothek zur Erstellung von Fenstern mit OpenGL-Kontexten.}
+\subsubsection*{GLEW}
+\textit{Die OpenGL Extension Wrangler Library für eine einfachere Handhabung von OpenGL-Erweiterungen.}
+\subsubsection*{GLM}
+\textit{OpenGL Mathematics (GLM) ist eine rein Header basierte C++-Mathematikbibliothek für Grafiksoftware, basierend auf den Spezifikationen der OpenGL Shading Language (GLSL).}
+\subsubsection*{Dear ImGui}
+\textit{Eine einfache Immediate Mode-Grafikbenutzeroberfläche für C++.}
+\subsubsection*{CMake}
+\textit{Ein plattformübergreifendes Open-Source-Build-System.}
+\subsubsection*{CMakeRC}
+\textit{Ein Ressourcencompiler in einem einzigen CMake-Skript.}
+
 \section{Literaturverzeichnis}
 Literaturverzeichnis
