--- a/TeX/main.tex
+++ b/TeX/main.tex
@@ -21,6 +21,7 @@
 \usepackage{array}
 \usepackage{titlesec}
 \usepackage{color}
+\usepackage{url}
 \definecolor{gray75}{gray}{0.75}
 \newcommand{\hsp}{\hspace{20pt}}
 \titleformat{\chapter}[hang]{\Huge\bfseries}{\thechapter\hsp\textcolor{gray75}{|}\hsp}{0pt}{\Huge\bfseries}
