Update TeX files

--- a/TeX/Anhang.tex
+++ b/TeX/Anhang.tex
@@ -16,7 +16,7 @@ folgenden GitHub Link verfügbar: \newline
 \subsubsection*{GLM}
 \textit{OpenGL Mathematics (GLM) ist eine rein Header basierte C++-Mathematikbibliothek für Grafiksoftware, basierend auf den Spezifikationen der OpenGL Shading Language (GLSL).}
 \subsubsection*{Dear ImGui}
-\textit{Eine einfache Immediate Mode-Grafikbenutzeroberfläche für C++.}
+\textit{Eine einfache Immediate-Mode-Grafikbenutzeroberfläche für C++.}
 \subsubsection*{CMake}
 \textit{Ein plattformübergreifendes Open-Source-Build-System.}
 \subsubsection*{CMakeRC}
