Update TeX files

--- a/TeX/Anhang.tex
+++ b/TeX/Anhang.tex
@@ -9,18 +9,18 @@ folgenden GitHub Link verfügbar: \newline
 \url{https://www.github.com/kevinoverflow/Fraktale}
 % \section{Abbildungen} %
 \section{Bibliotheken}
-\subsubsection*{GLFW}
-\textit{Eine plattformübergreifende Bibliothek zur Erstellung von Fenstern mit OpenGL-Kontexten.}
-\subsubsection*{GLEW}
-\textit{Die OpenGL Extension Wrangler Library für eine einfachere Handhabung von OpenGL-Erweiterungen.}
-\subsubsection*{GLM}
-\textit{OpenGL Mathematics (GLM) ist eine rein Header basierte C++-Mathematikbibliothek für Grafiksoftware, basierend auf den Spezifikationen der OpenGL Shading Language (GLSL).}
-\subsubsection*{Dear ImGui}
-\textit{Eine einfache Immediate-Mode-Grafikbenutzeroberfläche für C++.}
-\subsubsection*{CMake}
+\subsubsection*{CMake - \url{https://cmake.org/}}
 \textit{Ein plattformübergreifendes Open-Source-Build-System.}
-\subsubsection*{CMakeRC}
+\subsubsection*{CMakeRC - \url{https://github.com/vector-of-bool/cmrc}}
 \textit{Ein Ressourcencompiler in einem einzigen CMake-Skript.}
-
+\subsubsection*{Dear ImGui - \url{https://github.com/ocornut/imgui}}
+\textit{Eine einfache Immediate-Mode-Grafikbenutzeroberfläche für C++.}
+\subsubsection*{GLFW - \url{https://www.glfw.org/}}
+\textit{Eine plattformübergreifende Bibliothek zur Erstellung von Fenstern mit OpenGL-Kontexten.}
+\subsubsection*{GLEW - \url{http://glew.sourceforge.net/}}
+\textit{Die OpenGL Extension Wrangler Library für eine einfachere Handhabung von OpenGL-Erweiterungen.}
+\subsubsection*{GLM - \url{https://glm.g-truc.net/0.9.9/index.html}}
+\textit{OpenGL Mathematics (GLM) ist eine rein Header basierte C++-Mathematikbibliothek für Grafiksoftware, basierend auf den Spezifikationen der OpenGL Shading Language (GLSL).}
+\newpage
 \section{Literaturverzeichnis}
-Literaturverzeichnis
+\printbibliography[heading=none]
