--- a/TeX/Einleitung.tex
+++ b/TeX/Einleitung.tex
@@ -5,7 +5,7 @@
 \lettrine{F}{raktale} sind faszinierende Strukturen, die uns allgegenwärtig umgeben.
 Von der verzweigten Struktur eines Baumes bis hin zu den Wolken am Himmel, die sich in immer kleiner werdende Strukturen aufteilen, sind Fraktale ein fester Bestandteil unserer natürlichen Umgebung.
 Aber auch in der Mathematik sind Fraktale zu finden. \newline
-Der Begriff \textit{Fraktal} wurde um 1975 vom Mathematiker Benoît Mandelbrot geprägt und beschreibt natürliche und künstliche Formen, die bestimmte geometrische Eigenschaften aufweisen. \newline
+Der Begriff \textit{Fraktal} wurde um 1975 vom Mathematiker Benoît Mandelbrot geprägt \cite{dewiki:238550386} und beschreibt natürliche und künstliche Formen, die bestimmte geometrische Eigenschaften aufweisen. \newline
 Fraktale zeichnen sich durch ihre \textit{Selbstähnlichkeit} auf unterschiedlichen Größenskalen aus. Das bedeutet, dass Teile der Struktur in verschiedenen Vergrößerungen ähnliche Formen aufweisen. \newline
 \hfill \break
 Im theoretischen Teil dieser komplexen Leistung werde ich mich mit der mathematischen Theorie hinter Fraktalen beschäftigen, insbesondere mit der \textit{Mandelbrot-Menge} und den \textit{Julia-Mengen}. \newline
