--- a/TeX/Theoretischer-Teil.tex
+++ b/TeX/Theoretischer-Teil.tex
@@ -81,10 +81,10 @@ Imaginärteil eingeteilt.
 \noindent
 Um mit zwei komplexen Zahlen $z=a+bi$ und $w=c+di$ rechnen zu können, gelten die folgenden Rechenregeln.
 \begin{itemize}
-  \item \textbf{Addition und Subtraktion}: $z \pm w = (a \pm c) + i \cdot (b \pm d)$
-  \item \textbf{Multiplikation}: $z \cdot w = (ac - bd) + i \cdot (ad + bc)$
+  \item \textbf{Addition und Subtraktion}: $z \pm w = (a \pm c) + i \cdot (b \pm d)$  \cite{Komplexe14:online}
+  \item \textbf{Multiplikation}: $z \cdot w = (ac - bd) + i \cdot (ad + bc)$ \cite{Komplexe14:online}
 \end{itemize}
-Der Betrag $\lvert z \rvert = \sqrt{a^{2}+b^{2}} $ gibt die quantitative Menge der komplexen Zahl $z$ an.
+Der Betrag $\lvert z \rvert = \sqrt{a^{2}+b^{2}} $ gibt die quantitative Menge der komplexen Zahl $z$ an.\cite{Komplexe61:online}
 
 \pagebreak
 
@@ -94,7 +94,7 @@ Die Mandelbrot-Menge gilt als das wohl bekannteste Fraktal und wurde im Jahr
 aller komplexen Zahlen, deren Betrag bei Anwendung folgender iterativen
 Vorschrift gegen einen festgelegten Grenzwert konvergiert.
 
-$$z_{n+1} = z_{n}^{2}+ c$$
+$$z_{n+1} = z_{n}^{2}+ c$$ \cite{Mandelbr34:online}
 
 \noindent
 Man beginnt mit $z_{0} = 0$ als Startwert und einer komplexen Zahl $c$ als Konstante.
@@ -137,8 +137,8 @@ Ein weiteres Fraktal, welches eng mit der Mandelbrot-Menge zusammenhängt, sind
 die Julia-Mengen. Jeder komplexen Zahl $c$ ist eine Julia-Menge zugeordnet,
 wobei die komplexen Zahlen, die auch zur Mandelbrot-Menge gehören, Julia-Mengen
 erzeugen, welche ähnliche Strukturen der Mandelbrot-Menge aufweisen. \newline
-Sie wurden erstmals 1918 von dem französischen Mathematiker Gaston Julia und
-dem französischen Physiker Pierre Fatou beschrieben. \hfill \break \newline
+Sie wurden erstmals 1919 von dem französischen Mathematiker Gaston Julia und
+dem französischen Physiker Pierre Fatou beschrieben. \cite{JuliaMen20:online}\cite{Juliamen90:online} \hfill \break \newline
 Julia-Mengen werden ebenfalls durch die iterative Zahlenfolge $z_{n+1} =
   z_{n}^{2}+ c$ gebildet. Anders als bei der Mandelbrot-Menge wird jedoch der
 Startwert $z_{0}$ nicht auf 0 gesetzt, sondern auf die jeweilige komplexe Zahl
@@ -156,7 +156,7 @@ gleichen aber den jeweiligen Strukturen der Mandelbrot-Menge.
 \begin{figure}[!htb]
   \minipage{0.30\textwidth}
   \includegraphics[width=\linewidth]{img/Julia -1.0+0.4i.pdf}
-  \caption{\newline Julia-Menge für \newline $c=-1.0+4.0i$}\label{fig:julia-menge-1}
+  \caption{\newline Julia-Menge für \newline $c=-1,0+4,0i$}\label{fig:julia-menge-1}
   \endminipage\hfill
   \minipage{0.30\textwidth}
   \includegraphics[width=\linewidth]{img/Julia -0.8+0.2i.pdf}
